Fix for the image and text alignment on testimonials

--- a/css/sp123-omega.styles.css
+++ b/css/sp123-omega.styles.css
@@ -156,6 +156,8 @@ div.panel-pane div.node.node-testimonial.node-testimonial-image {
     padding-top: 2em; }
     div.panel-pane div.node.node-testimonial.node-testimonial-image .row-one .pane-node-field-author-image img {
       border-radius: 5px; }
+    div.panel-pane div.node.node-testimonial.node-testimonial-image .row-one .pane-node-title {
+      margin-top: 0; }
   div.panel-pane div.node.node-testimonial.node-testimonial-image .row-two {
     padding: 0 1em 1em 1em; }
 
