--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -215,6 +215,9 @@ div.panel-pane div.node.node-testimonial.node-testimonial-image {
 		.pane-node-field-author-image img {
 			border-radius: 5px;
 		}
+		.pane-node-title {
+			margin-top: 0;
+		}
 	}
 
 	.row-two {
